LIST OF CHANGES

release 86.3
 - event notification - do LIMs notification first; if it fails and is run
     multiple times as a consequence, users are not spammed

release 86.2
 - event notification:
     use faster ml warehouse st::api::lims driver (ml_warehouse_fc_cache)
     find templates directory relative to the running script bin
     fix npg tracking server url in reports' text
     filter out undefined email addresses
     bug fixes
 - remove models for db tables that are due to be dropped
 - update apache conf so server run with 1 thread/child w/mpm_worker_module
   Config::IniFiles used by ClearPress::util does not seem to be thread safe
 - replace image generation/manipulation routines by a stub
   returning a simple static image (these routines are used
   in npg_qc in web pages that are no longer used).
 - st::api::lims helper over boolean values for a pool fixed to work
   correctly for compositions

release 86.1
 - update models, droping cost code and cost group
 - updating templates to remove broken R&D watermark based on cost_code
 - deleting fixtures and tests for cost code and cost group
 - under modperl information about request url is not available in
   env. variables; now getting it directy from the CGI module
 - when possible, any subsequent requests should go to the server
   from which the original page was served (makes sense in general
   and helps to set up proper dev environment)
 - web pages - drop buttons linking to non-existing pages

release 86.0
 - httpd config files for httpd v.2.4.23 and mod-perl v.2
 - simple uptime report for Illumina sequencing instruments
 - reinmplementation of events reporting
 - timing of emails to followers is changed from statuses
   'run complete' and 'run archived' to 'qc review pending' and 'qc complete'.
 - ClearPress library is pinned to v. 473.0.5

release 85.6
 - code and tests changes to reduce number of warnings under Perl 5.22.2
 - use mysql 5.7.13 in travis (installing from deb)